--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Say It Here</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
